[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/script/launcher/Inscription.gd" type="Script" id=1]

[node name="Inscription" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -1.0
margin_top = -1.0
margin_right = 289.0
margin_bottom = 417.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 270.0
margin_bottom = 322.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 250.0
margin_bottom = 358.0

[node name="Label1" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 14.0
text = "Inscription"
align = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 22.0

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 250.0
margin_bottom = 40.0
text = "Pseudo (nom du personnage)"

[node name="LineEdit2" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 250.0
margin_bottom = 68.0
focus_previous = NodePath("../LineEdit3")
caret_blink = true
caret_blink_speed = 0.5

[node name="Label3" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 250.0
margin_bottom = 86.0
text = "Mail"

[node name="LineEdit3" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 250.0
margin_bottom = 114.0
focus_next = NodePath("../LineEdit4")
focus_previous = NodePath("../LineEdit2")
caret_blink = true
caret_blink_speed = 0.5

[node name="Label4" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 250.0
margin_bottom = 132.0
text = "Confirmer mail"

[node name="LineEdit4" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 250.0
margin_bottom = 160.0
focus_next = NodePath("../LineEdit5")
focus_previous = NodePath("../LineEdit3")
caret_blink = true
caret_blink_speed = 0.5

[node name="Label5" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 250.0
margin_bottom = 178.0
text = "Mot de passe"

[node name="LineEdit5" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 250.0
margin_bottom = 206.0
focus_next = NodePath("../LineEdit6")
focus_previous = NodePath("../LineEdit4")
caret_blink = true
caret_blink_speed = 0.5

[node name="Label6" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 250.0
margin_bottom = 224.0
text = "Confirmer mot de passe"

[node name="LineEdit6" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 250.0
margin_bottom = 252.0
focus_next = NodePath("../LineEdit7")
focus_previous = NodePath("../LineEdit5")
caret_blink = true
caret_blink_speed = 0.5

[node name="Label7" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 250.0
margin_bottom = 270.0
text = "Date de naissance "

[node name="LineEdit7" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 274.0
margin_right = 250.0
margin_bottom = 298.0
focus_next = NodePath("../CheckBox")
focus_previous = NodePath("../LineEdit6")
caret_blink = true
caret_blink_speed = 0.5

[node name="CheckBox" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 250.0
margin_bottom = 326.0
focus_next = NodePath("../Button")
focus_previous = NodePath("../LineEdit7")
text = "S'inscrire Ã  la newletter"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 250.0
margin_bottom = 334.0

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 250.0
margin_bottom = 358.0
text = "S'inscrire"

[node name="HTTPRequest" type="HTTPRequest" parent="Panel"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="Panel/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
